dev: put mirror routes into swagger file
